--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(to right, #ffffff, #9d55f0, #000000);
+    background: linear-gradient(to right, #ffffff, #8334dd, #000000);
 }
 h1{
     color: #000000;
